MacViews: use dark on light icon in incognito bookmark folders

Bug: 833973
Change-Id: I12adaf55546312ab6f348abca0671358eec5757d
Reviewed-on: https://chromium-review.googlesource.com/1194463
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Leonard Grey <lgrey@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586842}
Former-commit-id: a6e5208337d8981500ff24bd25e7eb6c7926e5bc